# backend-questoes

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: app.py
app/core/: llm_config.py
app/data/: skills_matrix_saeb_seama.json
app/enums/: agente_prompt_template.py  model_evaluation_type.py
app/models/: question_model.py  user_model.py
app/prompts/: ai_retrieval_pt_template.txt  authentic_pt_template.txt  generate_image_template.txt  humanities_skills_reference.txt  math_skills_reference.txt  portuguese_skills_reference.txt  real_text_pt_template.txt  science_skills_reference.txt  source_pt_template.txt
app/repositories/: question_repository.py  user_repository.py
app/routes/: agent_route.py  auth_routes.py  doc_routes.py  question_routes.py  user_routes.py
app/schemas/: auth_schema.py  generate_docx_response_schema.py  image_response.py  message_schema.py  question_schema.py  request_body_agent.py  response_agent_schema.py  user_schema.py
app/services/: auth_service.py  generate_docx_service.py  generate_image_agent_service.py  generate_question_agent_service.py  langgraph_orchestrator.py  progress_manager.py  skills_matrix_service.py  text_search_service.py  user_service.py
app/utils/: add_user_admin_script.py  connect_db.py  save_image.py  security.py
export/: itens-teste.docx  itens.docx  questões testes.docx  teste.docx  teste1.docx  teste23.docx  teste8.docx
migrations/: add_validated_field.py  env.py
migrations/versions/: 04908bc386da_update_users_tables_fix_updated_at.py  de25a3ab0322_create_users_table.py  (+1 more)
(+10 files in other folders)
